# winnfsd_desktop

./: .gitmodules  CMakeLists.txt  ThomasBS.txt  _.cpp  _.h  _dependencies.txt  _factory.cpp  _fedora_kde_35_deps.txt  _main.inl  _main_.inl  _main_fedora_kde_35.inl  aaa__library.h  aaa_impact.h  aaa_interface_list2.cpp  aaa_interface_list2.h  aaa_main_impact.cpp  aaa_main_impact.h  aaa_socket_thread.cpp  aaaa_command_list2.cpp  app_simple_winnfsd_desktop.cbp  app_simple_winnfsd_desktop.vcxproj  app_simple_winnfsd_desktop.vcxproj.filters  application.cpp  application.h  clang_simple_http_file_server.cbp  command.cpp  command.h  deployment.rc  deps.txt  document.cpp  document.h  edit_impact.cpp  edit_impact.h  frame.cpp  frame.h  impact.cpp  impact.h  incoming_socket.cpp  incoming_socket.h  incoming_socket_thread.cpp  (+20 more)
__implement/: CMakeLists.txt  main.cpp  shared_app_simple_winnfsd_desktop.vcxproj  shared_app_simple_winnfsd_desktop.vcxproj.filters  static_app_simple_winnfsd_desktop.vcxproj  static_app_simple_winnfsd_desktop.vcxproj.bak  static_app_simple_winnfsd_desktop.vcxproj.filters
__implement/_app_simple_winnfsd_desktop.xcodeproj/: project.pbxproj
__implement/_app_simple_winnfsd_desktop.xcodeproj/xcshareddata/xcschemes/: _app_simple_winnfsd_desktop.xcscheme
__implement/macos/en.lproj/: InfoPlist.strings
aaa/: _static_factory.inl  _static_factory_.inl  _static_factory_exchange.inl  _static_factory_fedora_kde_35.inl
app_simple_winnfsd_desktop.xcodeproj/: project.pbxproj
app_simple_winnfsd_desktop1.xcodeproj/: project.pbxproj
ios_http.xcodeproj/: project.pbxproj
sample/document/: setup_static_ip.simple_networking_application
